--- a/rabbit-trap.html
+++ b/rabbit-trap.html
@@ -48,13 +48,13 @@
         "05":["02/controller-02.js", "05/display-05.js", "01/engine-01.js", "05/game-05.js", "05/main-05.js"],
         "06":["02/controller-02.js", "05/display-05.js", "06/engine-06.js", "06/game-06.js", "06/main-06.js"],
         "07":["02/controller-02.js", "05/display-05.js", "06/engine-06.js", "07/game-07.js", "07/main-07.js"],
-        "08":["02/controller-02.js", "05/display-05.js", "06/engine-06.js", "07/game-07.js", "08/main-07.js"],
+        "08":["02/controller-02.js", "05/display-05.js", "06/engine-06.js", "07/game-07.js", "08/main-08.js"],
 
       };
 
       switch(part) {
 
-        case "01": case "02": case "03": case "04": case "05": case "06": case "07": break;
+        case "01": case "02": case "03": case "04": case "05": case "06": case "07": case "08": break;
         default:
           part = "08";
 
