Added changes that display an interduction

--- a/rabbit-trap.html
+++ b/rabbit-trap.html
@@ -12,7 +12,13 @@
   </head>
 
   <body>
-
+    <div class = "splash_screen">
+      Wellcome to Rabbit Trap!
+      Collect all the carrots to win!
+      Left Arrow: Move Left
+      Right Arrow: Move Right
+      Space: Jump
+    </div>
     <!-- Added a menu to navigate projects from the main page -->
     <div id = "menu">
       <p>menu</p>
